# golem_manipulation

./: README.md
golem_description/: CMakeLists.txt  package.xml  urdf.rviz
golem_description/launch/: gazebo_sim.launch  gazebo_sim_moveit.launch  gazebo_sim_no_controllers.launch  rviz_sim.launch
golem_description/meshes/: base_link.STL  body.STL  chest.STL  head1.STL  head2.STL  l_arm.STL  l_forearm.STL  l_gripper_m25.STL  l_gripper_m27.STL  l_shoulder_m20.STL  l_shoulder_m21.STL  l_wrist.STL  r_arm.STL  r_forearm.STL  r_shoulder_m10.STL  r_shoulder_m11.STL
golem_description/urdf/: golem.gazebo  golem.urdf  golem.xacro  golem_right_arm.xacro
golem_dynamixel/: CMakeLists.txt  package.xml
golem_dynamixel/config/: golem_joints.yaml  meta_controller_motorgroups.yaml
golem_dynamixel/launch/: dynamixel_manager.launch  golem_dynamixel.launch
golem_dynamixel/script/: golem_poses_client.py
golem_gazebo/: CMakeLists.txt  package.xml
golem_gazebo/config/: golem_controllers.yaml  golem_controllers_eff.yaml  golem_controllers_pos.yaml
golem_gazebo/launch/: gazebo_controllers.launch  golem_world.launch
golem_gazebo/scripts/: remapper.py
golem_gazebo/worlds/: golem.world
golem_kinematics/: CMakeLists.txt  package.xml
golem_kinematics/scripts/: golem_kinematics_server.py  golem_right_arm_kinematics.py  manipulation_node.py  manipulation_test.py  manipulation_test_01.ipynb  move_group_node.py
golem_kinematics/srv/: ForwardKinematics.srv  InverseKinematics.srv  JointState.srv  MoveToPose.srv
golem_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jupyter_tests/: Untitled.ipynb  Untitled1.ipynb  create_random_poses.ipynb  gazebo_manipulation_test.ipynb  golem_left_arm_kinematics.py  golem_right_arm_kinematics.py  manipulation_node.py  moveit_planning_scene.ipynb  moveit_tutorial.ipynb  read_urdf_python.ipynb  test_ik_service.ipynb  test_python_ik_solver.ipynb
(+46 files in other folders)
