<?xml version="1.0"?>
<package>
  <name>golem_dynamixel</name>
  <version>1.0.0</version>
  <description>Package for interface with Golem dynamixel motors</description>

  <author>Uriel O</author>
  <maintainer email="euriel.ortiz@gmail.com">Uriel Ortiz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>