<?xml version="1.0"?>
<package>
  <name>golem_gazebo</name>
  <version>1.0.0</version>
  <description>The golem gazebo package</description>

  <author>Uriel O</author>
  <maintainer email="euriel.ortiz@gmail.com">Uriel Ortiz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>golem_description</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>golem_description</run_depend>

</package>